--- a/app/src/main/res/layout/dialog_calculate_height.xml
+++ b/app/src/main/res/layout/dialog_calculate_height.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="wrap_content" android:padding="10dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <ImageButton
@@ -10,7 +10,7 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:padding="8dp"
-        android:layout_gravity="right"
+        android:layout_gravity="right" android:visibility="gone"
         android:background="@color/transparent"
         android:scaleType="fitXY"
         android:src="@drawable/close" />
