--- a/app/src/main/res/layout/dialog_task.xml
+++ b/app/src/main/res/layout/dialog_task.xml
@@ -6,19 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="10dp"
+
     >
-    <ImageButton
-        android:id="@+id/btn_cancel"
-        android:layout_gravity="right"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:padding="8dp"
-        android:scaleType="fitXY"
-        android:background="@color/transparent"
-         android:src="@drawable/close" />
     <LinearLayout
-        android:layout_width="wrap_content" android:gravity="left|center"
+        android:layout_width="wrap_content" android:gravity="left|center" android:layout_marginLeft="10dp"
         android:layout_height="wrap_content">
         <TextView
             android:layout_width="70dp"
@@ -43,8 +34,17 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:entries="@array/finishaction" />
+        <ImageButton
+            android:id="@+id/btn_cancel"
+            android:layout_gravity="right"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:padding="8dp"
+            android:scaleType="fitXY"
+            android:background="@color/transparent" android:layout_marginLeft="20dp"
+            android:src="@drawable/close" />
     </LinearLayout>
-    <LinearLayout
+    <LinearLayout android:layout_marginLeft="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
@@ -78,7 +78,7 @@
     </LinearLayout>
 
 
-    <LinearLayout
+    <LinearLayout android:layout_marginLeft="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
@@ -118,7 +118,7 @@
             android:entries="@array/spniner_ishover" />
 
     </LinearLayout>
-    <LinearLayout
+    <LinearLayout android:layout_marginLeft="10dp"
         android:layout_width="wrap_content" android:gravity="left|center"
         android:layout_height="wrap_content">
         <TextView
@@ -158,7 +158,7 @@
             android:layout_gravity="center_vertical"
             android:text="M" />
     </LinearLayout>
-    <LinearLayout
+    <LinearLayout android:layout_marginLeft="10dp"
         android:gravity="left|center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -205,7 +205,7 @@
             android:layout_height="wrap_content"
             android:text="°" />
     </LinearLayout>
-    <LinearLayout
+    <LinearLayout android:layout_marginLeft="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
@@ -260,9 +260,22 @@
             android:text="%" />
 
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="wrap_content" android:layout_gravity="right"
+    <LinearLayout android:layout_marginLeft="10dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="飞行高度" />
+        <EditText
+            android:id="@+id/flyHeight"
+            android:imeOptions="actionDone"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:inputType="number"
+            android:text="" />
         <TextView
             android:layout_width="70dp"
             android:layout_height="wrap_content"
@@ -284,14 +297,24 @@
             android:layout_margin="5dp"
             android:layout_gravity="center"
             android:text="第三方相机" />
+        <Switch
+            android:id="@+id/isSrtm" android:enabled="false"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="13dp"
+            android:layout_margin="5dp"
+            android:layout_gravity="center"
+            android:text="贴地飞行" />
+
         <Button
             android:id="@+id/btn_confirm"
-            android:layout_gravity="right"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="right"
             android:layout_marginLeft="5dp"
             android:text="保存" />
     </LinearLayout>
+
 </LinearLayout>
 
 
