--- a/app/src/main/res/layout/simple_list_item.xml
+++ b/app/src/main/res/layout/simple_list_item.xml
@@ -20,6 +20,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
+    android:textColor="@android:color/black"
     android:gravity="center_vertical"
     android:paddingLeft="?attr/qmui_content_padding_horizontal"
     android:paddingRight="?attr/qmui_content_padding_horizontal"
