--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowFullscreen">true</item>
         <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="android:textColor">#000000</item>  // 2023.12.22 AZY：所有字體改爲黑色
     </style>
     <style name="Toolbar_TextAppearance_White">
         <item name="android:textSize">18sp</item>
@@ -43,5 +44,8 @@
     </style>
     <style name="BlackText">
         <item name="android:textColor">@color/black</item>
+    </style>
+    <style name="SpinnerTextStyle" parent="Widget.AppCompat.DropDownItem.Spinner">
+        <item name="android:textColor">#000000</item>
     </style>
 </resources>
